[package]
name = "inference"
version = "0.1.0"
edition = "2024"

[dependencies]
kalosm = { git = "https://github.com/floneum/floneum.git", package = "kalosm", features = ["language", "cuda"] }
anyhow  = "1.0"
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.4"
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = "0.3"
clap = { version = "4.5.37", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3.6"